--- a/my-calc/src/App.css
+++ b/my-calc/src/App.css
@@ -2,6 +2,35 @@
   text-align: center;
 }
 
+.display {
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+   justify-content: center;
+   display: flex;
+   flex-direction: row;
+}
+
+.top {
+   justify-content: center;
+   display: flex;
+   flex-direction: row;
+}
+
+button {
+  font-size: 60px;
+  padding: 10px 30px;
+  font-weight: bold;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
